Documentation edits made through Mintlify web editor

--- a/marketing-tools/mini-game.mdx
+++ b/marketing-tools/mini-game.mdx
@@ -8,20 +8,40 @@ description: "Để tạo một chương trình game, người dùng cần thự
 
 Tại phần Trò chơi, truy cập tab Giải thưởng
 
-![Screenshot 2025-09-07 at 19.11.47.png](/images/Screenshot2025-09-07at19.11.47.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image676_34297987db.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
 
 Ở giao diện tổng quan, người dùng có thể tạo các voucher để làm phần thưởng cho chương trình game của hệ thống:
 
 - Chọn “\+ Tạo voucher” để thêm voucher cho chương trình game → Điền các thông tin biểu mẫu yêu cầu → Tại cột Danh sách voucher, chọn “Voucher game” đã tạo ở “CT Khuyến mãi" để làm phần thưởng → Nhấn “Tạo” để hoàn tất thao tác thêm giải thưởng cho chương trình game
 
-![Screenshot 2025-09-07 at 19.14.57.png](/images/Screenshot2025-09-07at19.14.57.png)
+
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image677_3c19f294cf.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
 
 - Chọn icon <Icon icon="pencil" color="#1526ec" size={15} /> để xem và chỉnh sửa giải thưởng
 - Chọn icon <Icon icon="trash-can" color="#e50b0b" size={15} /> để xóa giải thưởng
 
 **Cài đặt trò chơi**
 
-![Screenshot 2025-09-07 at 19.17.26.png](/images/Screenshot2025-09-07at19.17.26.png)
+
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image678_bc76977c0f.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
 
 Ở giao diện tổng quan, người dùng có thể tạo các chương trình game để làm phần thưởng khi khách hàng tham gia mini game trên app: 
 
@@ -31,23 +51,65 @@ Tại phần Trò chơi, truy cập tab Giải thưởng
   - Mở bao lì xì
   - Mở hộp quà
 
-![Screenshot 2025-09-07 at 19.21.19.png](/images/Screenshot2025-09-07at19.21.19.png)
 
-![Screenshot 2025-09-07 at 19.22.06.png](/images/Screenshot2025-09-07at19.22.06.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image680_f64d94c898.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
 
-![Screenshot 2025-09-07 at 19.22.33.png](/images/Screenshot2025-09-07at19.22.33.png)
 
-![Screenshot 2025-09-07 at 19.22.54.png](/images/Screenshot2025-09-07at19.22.54.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image681_fa99db4fe5.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image682_8c9e3811da.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image683_54351132b5.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
 
 - Chọn icon <Icon icon="pencil" color="#0f0bef" size={15} /> để xem và chỉnh sửa chương trình game
 - Chọn icon <Icon icon="trash-can" color="#e80c0c" size={15} /> để xóa chương trình game
 - Người dùng có thể tìm kiếm chương trình game theo tên hoặc lọc các chương trình game theo ngày được khởi tạo để hiển thị kết quả như yêu cầu
 
-![screenshot_1757247922.png](/images/screenshot_1757247922.png)
+
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image684_ff1e7c048f.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
 
 **Danh sách giải thưởng**
 
-![screenshot_1757247988.png](/images/screenshot_1757247988.png)
+
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image685_414bde9d7c.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
 
 Ở giao diện tổng quan, người dùng có thể:
 
