--- a/marketing-tools/flash-sale.mdx
+++ b/marketing-tools/flash-sale.mdx
@@ -6,23 +6,47 @@ icon: "bolt"
 
 Tại phần Marketing, truy cập Flash Sale → chọn tab “Sản phẩm”
 
-![Screenshot 2025-09-07 at 18.02.10.png](/images/Screenshot2025-09-07at18.02.10.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image672_68c5612788.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
 
 Ở giao diện tổng quan, người dùng có thể:
 
 - Xem tổng quan doanh thu từ các chương trình flash sale mang lại
 - Xem chi tiết các chương trình flash sale đang - đã hoạt động bằng cách chọn icon <Icon icon="eye" size={15} />
 
-![Screenshot 2025-09-07 at 18.03.30.png](/images/Screenshot2025-09-07at18.03.30.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image673_8b1c2dbe7e.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
 
 - Tạo các chương trình flash sale cho các sản phẩm của hệ thống. Chọn “\+ Thêm” → Điền các thông tin biểu mẫu yêu cầu → Chọn “Tạo” để thêm chương trình flash sale
   - Cài đặt khung giờ flash sale (Có thể tạo một hoặc nhiều khung giờ)
   - Lựa chọn sản phẩm cho chương trình flash sale
   - Người dùng có thể điền các thông tin flash sale cho toàn bộ sản phẩm được áp dụng chương trình hoặc điều chỉnh từng sản phẩm theo điều kiện khác nhau
 
-![screenshot_1757243166.png](/images/screenshot_1757243166.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image674_a1ae0c506c.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
 
-![screenshot_1757243556.png](/images/screenshot_1757243556.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image675_f15db1f873.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
 
 - Chọn icon <Icon icon="pencil" color="#0a0ce7" size={15} /> để chỉnh sửa chương trình flash sale
 - Chọn icon <Icon icon="trash-can" color="#ec0909" size={15} /> để xóa chương trình flash sale hoặc tích chọn checkbox ở đầu tên mỗi chương trình để xóa nhiều chương trình flash sale cùng lúc
