Documentation edits made through Mintlify web editor

--- a/settings/company-profile-setting.mdx
+++ b/settings/company-profile-setting.mdx
@@ -11,7 +11,7 @@ Nhấn **“Cập nhật”** để hoàn tất thao tác.
 
 <Frame>
   <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image630_8bc0b5cdca.png"
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image686_2c56035eb4.png"
     alt="Giao diện cài đặt công ty"
     style={{ borderRadius:"0.5rem" }}
   />
