--- a/settings/delivery-setting.mdx
+++ b/settings/delivery-setting.mdx
@@ -1,116 +1,51 @@
 ---
-title: 'Cài đặt vận chuyển '
-description: 'Description of your new file.'
+title: "Cài đặt vận chuyển "
+description: "Description of your new file."
 icon: "truck-bolt"
 ---
+
 ## **Nhà cung cấp vận chuyển**
 
 ---
 
 ### **Tổng quan**
 
-Truy cập **Quản lý Mini App → Nhà cung cấp vận chuyển**.  
-Chọn đơn vị vận chuyển để kết nối.  
-> Hiện tại Aimini hỗ trợ hai đơn vị: **GHN (Giao Hàng Nhanh)** và **GHTK (Giao Hàng Tiết Kiệm)**.
+Truy cập **Quản lý Mini App → Nhà cung cấp vận chuyển**.\
+Chọn đơn vị vận chuyển để kết nối.
+
+> Hiện tại Aimini hỗ trợ đơn vị: **GHN (Giao Hàng Nhanh)**.
 
 <Frame>
   <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image616_783efe7dd4.png"
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image693_9dc90cb4a3.png"
     alt="Danh sách nhà cung cấp vận chuyển"
-    style={{ borderRadius: "0.5rem" }}
+    style={{ borderRadius:"0.5rem" }}
   />
 </Frame>
 
 ---
 
-### **1. Giao Hàng Nhanh (GHN)**
+### **Giao Hàng Tiết Kiệm (GHTK)**
 
-**Bước 1:**  
-Truy cập [https://sso.ghn.vn/](https://sso.ghn.vn/) → Đăng nhập vào tài khoản GHN.
-
-<Frame>
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image617_53d72332a4.png"
-    alt="Đăng nhập GHN"
-    style={{ borderRadius: "0.5rem" }}
-  />
-</Frame>
-
-**Bước 2:**  
-Sau khi đăng nhập, chọn **“Chủ cửa hàng”** để lấy **Token API**.
-
-<Frame>
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image618_ebadea17de.png"
-    alt="Chọn chủ cửa hàng GHN"
-    style={{ borderRadius: "0.5rem" }}
-  />
-</Frame>
-
-<Frame>
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image619_f4f54b37fb.png"
-    alt="Copy token GHN"
-    style={{ borderRadius: "0.5rem" }}
-  />
-</Frame>
-
-**Bước 3:**  
-Truy cập hệ thống **POS → Nhà cung cấp vận chuyển → Kết nối GHN**.
-
-<Frame>
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image620_a5e2d6eae1.png"
-    alt="Kết nối GHN trong POS"
-    style={{ borderRadius: "0.5rem" }}
-  />
-</Frame>
-
-**Bước 4:**  
-Nhập **Token API** vào ô tương ứng → Nhấn **“Tạo”** để kết nối.
-
-<Frame>
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image621_8e3b3ad530.png"
-    alt="Nhập token kết nối GHN"
-    style={{ borderRadius: "0.5rem" }}
-  />
-</Frame>
-
-Kết nối thành công:
-<Frame>
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image623_43e2027c1b.png"
-    alt="Kết nối GHN thành công"
-    style={{ borderRadius: "0.5rem" }}
-  />
-</Frame>
-
-> **Lưu ý:** Bạn cần có tài khoản GHN để thực hiện kết nối.
-
----
-
-### **2. Giao Hàng Tiết Kiệm (GHTK)**
-
-**Bước 1:**  
-Truy cập [https://khachhang.giaohangtietkiem.vn/web/dang-ky](https://khachhang.giaohangtietkiem.vn/web/dang-ky) → Đăng nhập tài khoản GHTK.
+**Bước 1:**\
+Truy cập https://khachhang.giaohangtietkiem.vn/web/dang-ky → Đăng nhập tài khoản GHTK.
 
 <Frame>
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image624_a654842704.png"
     alt="Đăng nhập GHTK"
-    style={{ borderRadius: "0.5rem" }}
+    style={{ borderRadius:"0.5rem" }}
   />
 </Frame>
 
-**Bước 2:**  
+**Bước 2:**\
 Sau khi đăng nhập, chọn **Quản trị → Thông tin tài khoản** để lấy **API Token Key**.
 
 <Frame>
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image625_10b086307e.png"
     alt="Lấy API Key GHTK"
-    style={{ borderRadius: "0.5rem" }}
+    style={{ borderRadius:"0.5rem" }}
   />
 </Frame>
 
@@ -118,40 +53,40 @@ Sau khi đăng nhập, chọn **Quản trị → Thông tin tài khoản** để
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image626_ba34fc2ace.png"
     alt="Copy API Key GHTK"
-    style={{ borderRadius: "0.5rem" }}
+    style={{ borderRadius:"0.5rem" }}
   />
 </Frame>
 
-**Bước 3:**  
+**Bước 3:**\
 Truy cập **POS → Nhà cung cấp vận chuyển → Kết nối GHTK**.
 
 <Frame>
   <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image627_dac0e4723a.png"
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image694_7e8eefce99.png"
     alt="Kết nối GHTK trong POS"
-    style={{ borderRadius: "0.5rem" }}
+    style={{ borderRadius:"0.5rem" }}
   />
 </Frame>
 
-**Bước 4:**  
-Nhập **API Token Key** → Nhấn **“Tạo”** để kết nối.
+**Bước 4:**\
+Nhập **API Token Key** → Nhấn **“Tiếp theo”** để kết nối.
 
 <Frame>
   <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image628_8311952622.png"
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image695_98d9880987.png"
     alt="Nhập API Key kết nối GHTK"
-    style={{ borderRadius: "0.5rem" }}
+    style={{ borderRadius:"0.5rem" }}
   />
 </Frame>
 
 Kết nối thành công:
+
 <Frame>
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image629_072cd11b2f.png"
     alt="Kết nối GHTK thành công"
-    style={{ borderRadius: "0.5rem" }}
+    style={{ borderRadius:"0.5rem" }}
   />
 </Frame>
 
 > **Lưu ý:** Bạn cần có tài khoản GHTK để thực hiện kết nối.
-
