Documentation edits made through Mintlify web editor

--- a/automation/group-customers.mdx
+++ b/automation/group-customers.mdx
@@ -12,7 +12,7 @@ Truy cập **Automation → Nhóm khách hàng → Thêm nhóm**\
 
 <Frame caption="Thêm nhóm khách hàng">
   <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image582_89bc70e1d2.png"
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image719_3f4ae87a53.png"
     alt="Giao diện thêm nhóm khách hàng"
     style={{ borderRadius:"0.5rem" }}
   />
@@ -27,7 +27,7 @@ Truy cập **Automation → Nhóm khách hàng**\
 
 <Frame caption="Xem chi tiết nhóm khách hàng">
   <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image584_f251ffed29.png"
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image720_fc9fe51fdb.png"
     alt="Thông tin chi tiết nhóm khách hàng"
     style={{ borderRadius:"0.5rem" }}
   />
@@ -35,7 +35,7 @@ Truy cập **Automation → Nhóm khách hàng**\
 
 <Frame caption="Xem chi tiết nhóm khách hàng">
   <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image583_9b55b5bbf0.png"
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image721_348c54fb77.png"
     alt="Chi tiết nhóm khách hàng"
     style={{ borderRadius:"0.5rem" }}
   />
@@ -50,7 +50,7 @@ Truy cập **Automation → Nhóm khách hàng**\
 
 <Frame caption="Chỉnh sửa nhóm khách hàng">
   <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image585_2b4a171d0a.png"
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image722_a2d68f688f.png"
     alt="Giao diện chỉnh sửa nhóm khách hàng"
     style={{ borderRadius:"0.5rem" }}
   />
@@ -65,7 +65,7 @@ Truy cập **Automation → Nhóm khách hàng**\
 
 <Frame caption="Xóa nhóm khách hàng">
   <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image586_52ce47c4a8.png"
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image723_a5ca1a9045.png"
     alt="Giao diện xác nhận xóa nhóm khách hàng"
     style={{ borderRadius:"0.5rem" }}
   />
@@ -80,7 +80,7 @@ Truy cập **Automation → Nhóm khách hàng**\
 
 <Frame caption="Tìm kiếm nhóm khách hàng">
   <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image587_7ae7cb9676.png"
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image724_427df7fc3a.png"
     alt="Giao diện tìm kiếm nhóm khách hàng"
     style={{ borderRadius:"0.5rem" }}
   />
