Documentation edits made through Mintlify web editor

--- a/sale-management/product-management/review-management.mdx
+++ b/sale-management/product-management/review-management.mdx
@@ -6,7 +6,15 @@ icon: "star-sharp"
 
 Tại phần Quản lý sản phẩm, truy cập tab Đánh giá
 
-![Screenshot 2025-09-07 at 15.29.49.png](/images/Screenshot2025-09-07at15.29.49.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image725_a08383390f.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
 
 Ở giao diện tổng quan, người dùng có thể xem các thống kê đánh giá của khách hàng cho từng loại sản phẩm
 
