Documentation edits made through Mintlify web editor

--- a/app-builder/introduction/quickstart.mdx
+++ b/app-builder/introduction/quickstart.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Quickstart'
-description: 'Description of your new file.'
+description: 'Bắt đầu nhanh với AppMinis: Khám phá cách xây dựng ứng dụng chuyên nghiệp cho mọi ngành nghề.'
 icon: "circle-user"
 ---
 
