Documentation edits made through Mintlify web editor

--- a/app-builder/builder/design-app/drag-drop-component.mdx
+++ b/app-builder/builder/design-app/drag-drop-component.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Drap & Drop Components"
-description: "Description of your new file."
+description: "Hướng dẫn quản lý component trên trang: kéo thả để sắp xếp, bật/tắt hiển thị hoặc xóa."
 icon: "diagram-predecessor"
 ---
 
