--- a/app-builder/builder/design-app/navigation-bar.mdx
+++ b/app-builder/builder/design-app/navigation-bar.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Navigation Bar"
-description: "Description of your new file."
+description: "Hướng dẫn tùy chỉnh thanh điều hướng (Navigation Bar) của Mini App, bao gồm thêm, sửa, xóa trang và chọn mẫu."
 icon: "grid-round-2-plus"
 ---
 
