--- a/app-builder/builder/general-settings.mdx
+++ b/app-builder/builder/general-settings.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Cài đặt chung"
-description: "Description of your new file."
+description: "Hướng dẫn cấu hình các thông tin chung cho Mini App, bao gồm logo, tên, màu sắc và Zalo OA.."
 icon: "square-sliders-vertical"
 ---
 
