Documentation edits made through Mintlify web editor

--- a/app-builder/builder/pages/category-page.mdx
+++ b/app-builder/builder/pages/category-page.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Categories"
-description: "Description of your new file."
+description: "Hướng dẫn cài đặt component Danh mục: chọn bố cục, quản lý dữ liệu (thêm/sửa/xóa), và tùy chỉnh phong cách hiển thị."
 icon: "circle-user"
 ---
 
