--- a/app-builder/builder/pages/flashsale-page.mdx
+++ b/app-builder/builder/pages/flashsale-page.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Flashsale"
-description: "Description of your new file."
+description: "Hướng dẫn cài đặt component Flashsale: chọn bố cục, quản lý chương trình áp dụng, và tùy chỉnh thẻ sản phẩm."
 icon: "circle-user"
 ---
 
