--- a/app-builder/builder/pages/home.mdx
+++ b/app-builder/builder/pages/home.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Home"
-description: "Description of your new file."
+description: "Hướng dẫn tùy chỉnh Header trang Home, bao gồm chọn mẫu, cài đặt lề, phong cách, tiêu đề, và thanh tìm kiếm."
 icon: "circle-user"
 ---
 
