--- a/app-builder/builder/pages/payment-page.mdx
+++ b/app-builder/builder/pages/payment-page.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Payment setting"
-description: "Description of your new file."
+description: "Hướng dẫn cấu hình trang thanh toán: tùy chỉnh tiêu đề, các tùy chọn (ghi chú, giảm giá) và kích hoạt phương thức thanh toán."
 icon: "circle-user"
 ---
 
