--- a/app-builder/builder/pages/product-detail-page.mdx
+++ b/app-builder/builder/pages/product-detail-page.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Product Detail"
-description: "Description of your new file."
+description: "Cấu hình bố cục, hiển thị thông tin, và các thành phần trên trang Chi tiết Sản phẩm."
 icon: "circle-user"
 ---
 
