--- a/app-builder/builder/pages/user-profile-page.mdx
+++ b/app-builder/builder/pages/user-profile-page.mdx
@@ -1,6 +1,6 @@
 ---
 title: "User profile"
-description: "Description of your new file."
+description: "Hướng dẫn tùy chỉnh trang Cá nhân (User Profile): chọn bố cục, quản lý hạng thành viên, và bật/tắt các mô-đun hiển thị."
 icon: "circle-user"
 ---
 
