--- a/app-builder/builder/pages/minigame-page.mdx
+++ b/app-builder/builder/pages/minigame-page.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Mini Game"
-description: "Description of your new file."
+description: "Hướng dẫn quản lý phần thưởng và cài đặt hiển thị cho component Mini Game."
 icon: "circle-user"
 ---
 
