Documentation edits made through Mintlify web editor

--- a/app-builder/builder/img-library.mdx
+++ b/app-builder/builder/img-library.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Thư viện hình ảnh"
-description: "Description of your new file."
+description: "Hướng dẫn quản lý Thư viện hình ảnh: tải ảnh mới, xem, xóa, và sử dụng nguồn ảnh mẫu từ hệ thống."
 icon: "photo-film"
 ---
 
