--- a/app-builder/builder/pages/booking-page.mdx
+++ b/app-builder/builder/pages/booking-page.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Booking"
-description: "Description of your new file."
+description: "Hướng dẫn cài đặt component Booking: quản lý danh mục dịch vụ, chọn bố cục, và tùy chỉnh thẻ dịch vụ."
 icon: "circle-user"
 ---
 
