--- a/app-builder/builder/pages/flashsale-page.mdx
+++ b/app-builder/builder/pages/flashsale-page.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Flashsale"
 description: "Hướng dẫn cài đặt component Flashsale: chọn bố cục, quản lý chương trình áp dụng, và tùy chỉnh thẻ sản phẩm."
-icon: "circle-user"
+icon: "bolt"
 ---
 
 ### **3.3.3 FlashSale**
