--- a/app-builder/builder/pages/minigame-page.mdx
+++ b/app-builder/builder/pages/minigame-page.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Mini Game"
 description: "Hướng dẫn quản lý phần thưởng và cài đặt hiển thị cho component Mini Game."
-icon: "circle-user"
+icon: "game-console-handheld"
 ---
 
 ### **3.3.8. Mini Game**
