Documentation edits made through Mintlify web editor

--- a/app-builder/builder/components/banners.mdx
+++ b/app-builder/builder/components/banners.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Banners"
-description: "Description of your new file."
+description: "Hướng dẫn thêm, sửa, xóa Banners và tùy chỉnh các hiệu ứng, phong cách hiển thị."
 icon: "circle-user"
 ---
 
