--- a/app-builder/builder/components/categories.mdx
+++ b/app-builder/builder/components/categories.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Categories"
-description: "Description of your new file."
+description: "Hướng dẫn quản lý dữ liệu (thêm, sửa, xóa) và tùy chỉnh phong cách cho component Categories."
 icon: "circle-user"
 ---
 
