--- a/app-builder/builder/components/cta.mdx
+++ b/app-builder/builder/components/cta.mdx
@@ -1,6 +1,6 @@
 ---
 title: "CTA"
-description: "Description of your new file."
+description: "Hướng dẫn tùy chỉnh component CTA: bật/tắt tiêu đề, các nút (Quan tâm OA, Liên hệ), và cài đặt phong cách."
 icon: "circle-user"
 ---
 
