--- a/app-builder/builder/components/headers.mdx
+++ b/app-builder/builder/components/headers.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Headers"
-description: "Description of your new file."
+description: "Cấu hình Header: bật/tắt logo, tiêu đề, icon giỏ hàng, icon tìm kiếm, và cài đặt thanh tìm kiếm."
 icon: "circle-user"
 ---
 
