--- a/app-builder/builder/components/news.mdx
+++ b/app-builder/builder/components/news.mdx
@@ -1,6 +1,6 @@
 ---
 title: "News"
-description: "Description of your new file."
+description: "Hướng dẫn quản lý dữ liệu Tin tức (thêm, sửa, xóa) và tùy chỉnh hiển thị, phong cách cho component."
 icon: "circle-user"
 ---
 
