--- a/app-builder/builder/components/products.mdx
+++ b/app-builder/builder/components/products.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Products"
-description: "Description of your new file."
+description: "Hướng dẫn quản lý dữ liệu (thêm, sửa, xóa) và tùy chỉnh hiển thị, phong cách cho component Products."
 icon: "circle-user"
 ---
 
