--- a/app-builder/builder/components/support.mdx
+++ b/app-builder/builder/components/support.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Support"
-description: "Description of your new file."
+description: "Hướng dẫn quản lý dữ liệu (thêm, sửa, xóa) và tùy chỉnh hiển thị cho component Support."
 icon: "circle-user"
 ---
 
