--- a/app-builder/builder/components/flashsale.mdx
+++ b/app-builder/builder/components/flashsale.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Flashsale"
-description: "Description of your new file."
+description: "Hướng dẫn quản lý dữ liệu (thêm, sửa, xóa) và tùy chỉnh phong cách cho component FlashSale."
 icon: "circle-user"
 ---
 
