Documentation edits made through Mintlify web editor

--- a/app-builder/builder/demo-app.mdx
+++ b/app-builder/builder/demo-app.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Demo App'
-description: 'Description of your new file.'
+description: 'Hướng dẫn xem Demo App bằng cách quét mã QR từ trang App của tôi hoặc trang Thiết kế.'
 icon: "qrcode"
 ---
 ## **7.1. Demo App** 
