--- a/app-builder/builder/deploy-app.mdx
+++ b/app-builder/builder/deploy-app.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Deploy App"
-description: "Description of your new file."
+description: "Hướng dẫn xuất bản (Deploy) thiết kế Mini App và quy trình mua gói ứng dụng."
 icon: "arrow-up-from-arc"
 ---
 
