--- a/app-builder/builder/features/affiliate.mdx
+++ b/app-builder/builder/features/affiliate.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Affiliate"
-description: "Description of your new file."
+description: "Hướng dẫn cấu hình trang Affiliate: tùy chỉnh tiêu đề và bật/tắt hiển thị các mục như chia sẻ, thống kê hoa hồng, tiện ích."
 icon: "circle-user"
 ---
 
