--- a/app-builder/builder/features/automation.mdx
+++ b/app-builder/builder/features/automation.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Automation"
-description: "Description of your new file."
+description: "Giới thiệu tính năng Automation: Tự động hóa quy trình chăm sóc khách hàng và marketing với Trigger, Condition, Action."
 icon: "circle-user"
 ---
 
