--- a/app-builder/builder/features/loyalty.mdx
+++ b/app-builder/builder/features/loyalty.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Loyalty"
-description: "Description of your new file."
+description: "Hướng dẫn quản lý Hạng thành viên trong Loyalty: thêm mới, chỉnh sửa và xóa các cấp bậc thành viên."
 icon: "circle-user"
 ---
 
