--- a/app-builder/builder/features/minigame.mdx
+++ b/app-builder/builder/features/minigame.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Mini Game"
-description: "Description of your new file."
+description: "Hướng dẫn quản lý phần thưởng và cài đặt hiển thị, phong cách cho Minigame."
 icon: "circle-user"
 ---
 
