--- a/app-builder/builder/payment.mdx
+++ b/app-builder/builder/payment.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Thanh toán"
-description: "Description of your new file."
+description: "Hướng dẫn truy cập trang Gói ứng dụng, chi tiết các gói (Dùng thử, Tiêu chuẩn, Nâng cao), và quy trình thanh toán."
 icon: "credit-card-front"
 ---
 
