--- a/app-builder/builder/support.mdx
+++ b/app-builder/builder/support.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Kênh hỗ trợ"
-description: "Description of your new file."
+description: "Hướng dẫn sử dụng kênh hỗ trợ qua Zalo: Chat nhanh trực tiếp hoặc mở ứng dụng Zalo."
 icon: "comments-question"
 ---
 
