--- a/app-builder/builder/features/flashsale.mdx
+++ b/app-builder/builder/features/flashsale.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Flashsale"
-description: "Description of your new file."
+description: "Hướng dẫn cấu hình component FlashSale: chọn bố cục, quản lý chương trình, và tùy chỉnh hiển thị bộ đếm giờ, thẻ sản phẩm."
 icon: "circle-user"
 ---
 
