Documentation edits made through Mintlify web editor

--- a/sale-management/order-management.mdx
+++ b/sale-management/order-management.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Quản lý đơn hàng"
-description: "Description of your new file."
+description: "Hướng dẫn theo dõi, xử lý, và tạo mới các đơn hàng bán hàng online."
 icon: "cart-plus"
 ---
 
