--- a/sale-management/product-management/brands-management.mdx
+++ b/sale-management/product-management/brands-management.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Thương hiệu"
+description: "Hướng dẫn quản lý thương hiệu sản phẩm: thêm, sửa, xóa, nhập file, và tìm kiếm."
 icon: "nfc-magnifying-glass"
 ---
 
