--- a/sale-management/product-management/categories-management.mdx
+++ b/sale-management/product-management/categories-management.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Danh mục sản phẩm"
-description: "Description of your new file."
+description: "Hướng dẫn quản lý danh mục sản phẩm: thêm, sửa, xóa, nhập file và tạo danh mục con."
 icon: "arrow-down-short-wide"
 ---
 
