--- a/sale-management/product-management/review-management.mdx
+++ b/sale-management/product-management/review-management.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Đánh giá"
-description: "Description of your new file."
+description: "Hướng dẫn xem, phản hồi, bật/tắt và lọc các đánh giá sản phẩm của khách hàng."
 icon: "star-sharp"
 ---
 
