--- a/users-management/customers-management.mdx
+++ b/users-management/customers-management.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Quản lý khách hàng"
-description: "Description of your new file."
+description: "Hướng dẫn quản lý khách hàng: xem thống kê, thêm, sửa, xóa và tạo nhóm."
 icon: "circle-user"
 ---
 
