--- a/users-management/role-management.mdx
+++ b/users-management/role-management.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Vai trò và Quyền"
-description: "Description of your new file."
+description: "Hướng dẫn thêm vai trò mới và phân quyền trong mục Cài đặt hệ thống."
 icon: "user-gear"
 ---
 
