--- a/users-management/staff-management.mdx
+++ b/users-management/staff-management.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Quản lý nhân viên"
-description: "Description of your new file."
+description: "Quản lý thông tin nhân viên: thêm, sửa, xóa, tìm kiếm và phân vai trò."
 icon: "user-tie"
 ---
 
