--- a/sale-management/product-management/products-management.mdx
+++ b/sale-management/product-management/products-management.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Sản phẩm"
-description: "Description of your new file."
+description: "Hướng dẫn quản lý, thêm mới, tìm kiếm và chỉnh sửa sản phẩm trên hệ thống."
 icon: "box-isometric"
 ---
 Tại phần Quản lý sản phẩm, truy cập tab sản phẩm.
