Documentation edits made through Mintlify web editor

--- a/loyalty/member-management.mdx
+++ b/loyalty/member-management.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Thành viên"
-description: "Description of your new file."
+description: "Hướng dẫn xem thống kê, lịch sử điểm, reset điểm và chi tiết thành viên."
 icon: "people-line"
 ---
 
