--- a/loyalty/points-setting.mdx
+++ b/loyalty/points-setting.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Cài đặt điểm"
-description: "Description of your new file."
+description: "Cài đặt quy tắc quy đổi điểm và tạo nhiệm vụ tích điểm cho khách hàng."
 icon: "hundred-points"
 ---
 
