--- a/loyalty/ranking-management.mdx
+++ b/loyalty/ranking-management.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Hạng thành viên"
-description: "Description of your new file."
+description: "Hướng dẫn quản lý hạng thành viên: thêm, sửa, xóa và cài đặt khuyến mãi."
 icon: "ranking-star"
 ---
 
