Documentation edits made through Mintlify web editor

--- a/loyalty/gift-management.mdx
+++ b/loyalty/gift-management.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Quản lý đổi quà"
-description: "Description of your new file."
+description: "Hướng dẫn tạo và quản lý chương trình đổi điểm tích lũy lấy voucher khuyến mãi."
 icon: "gift"
 ---
 
