--- a/marketing-tools/flash-sale.mdx
+++ b/marketing-tools/flash-sale.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Flash sale"
-description: "Description of your new file."
+description: "Hướng dẫn tạo, quản lý và theo dõi doanh thu các chương trình flash sale sản phẩm."
 icon: "bolt"
 ---
 
