--- a/settings/company-profile-setting.mdx
+++ b/settings/company-profile-setting.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Thông tin công ty'
-description: 'Description of your new file.'
+description: 'Hướng dẫn chỉnh sửa và cập nhật thông tin công ty trong phần Cài đặt.'
 icon: "id-card"
 ---
 ## **Cài đặt công ty**
