--- a/settings/currency-setting.mdx
+++ b/settings/currency-setting.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Cài đặt thanh toán"
-description: "Description of your new file."
+description: "Hướng dẫn cài đặt, thêm, sửa, xóa các phương thức thanh toán (chuyển khoản, VNPay)."
 icon: "money-check-dollar"
 ---
 
