--- a/settings/delivery-setting.mdx
+++ b/settings/delivery-setting.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Cài đặt vận chuyển "
-description: "Description of your new file."
+description: "Hướng dẫn kết nối nhà cung cấp vận chuyển Giao Hàng Tiết Kiệm (GHTK)."
 icon: "truck-bolt"
 ---
 
