--- a/settings/integration.mdx
+++ b/settings/integration.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Tích hợp'
-description: 'Description of your new file.'
+description: 'Xem danh sách tích hợp hệ thống và liên hệ Aimini để được hỗ trợ.'
 icon: "network-wired"
 ---
 ## **Quản lý tích hợp**
