Documentation edits made through Mintlify web editor

--- a/app-builder/builder/features/minigame.mdx
+++ b/app-builder/builder/features/minigame.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Mini Game"
 description: "Hướng dẫn quản lý phần thưởng và cài đặt hiển thị, phong cách cho Minigame."
-icon: "circle-user"
+icon: "game-console-handheld"
 ---
 
 ## **6.5. Minigame**
