--- a/app-builder/builder/components/flashsale.mdx
+++ b/app-builder/builder/components/flashsale.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Flashsale"
 description: "Hướng dẫn quản lý dữ liệu (thêm, sửa, xóa) và tùy chỉnh phong cách cho component FlashSale."
-icon: "circle-user"
+icon: "bolt"
 ---
 
 ### **4.2.7. FlashSale**
