--- a/app-builder/builder/features/flashsale.mdx
+++ b/app-builder/builder/features/flashsale.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Flashsale"
 description: "Hướng dẫn cấu hình component FlashSale: chọn bố cục, quản lý chương trình, và tùy chỉnh hiển thị bộ đếm giờ, thẻ sản phẩm."
-icon: "circle-user"
+icon: "bolt"
 ---
 
 ## **6.3. FlashSale**
