Documentation edits made through Mintlify web editor

--- a/app-builder/builder/pages/booking-page.mdx
+++ b/app-builder/builder/pages/booking-page.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Booking"
 description: "Hướng dẫn cài đặt component Booking: quản lý danh mục dịch vụ, chọn bố cục, và tùy chỉnh thẻ dịch vụ."
-icon: "circle-user"
+icon: "calendar-days"
 ---
 
 ### **3.3.4. Booking**
