Documentation edits made through Mintlify web editor

--- a/app-builder/builder/pages/home.mdx
+++ b/app-builder/builder/pages/home.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Home"
 description: "Hướng dẫn tùy chỉnh Header trang Home, bao gồm chọn mẫu, cài đặt lề, phong cách, tiêu đề, và thanh tìm kiếm."
-icon: "circle-user"
+icon: "house"
 ---
 
 ### **3.3.1. Home**
