--- a/app-builder/builder/pages/payment-page.mdx
+++ b/app-builder/builder/pages/payment-page.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Payment setting"
 description: "Hướng dẫn cấu hình trang thanh toán: tùy chỉnh tiêu đề, các tùy chọn (ghi chú, giảm giá) và kích hoạt phương thức thanh toán."
-icon: "circle-user"
+icon: "money-check-dollar"
 ---
 
 ### **3.3.9. Payment setting**
