--- a/app-builder/builder/pages/product-detail-page.mdx
+++ b/app-builder/builder/pages/product-detail-page.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Product Detail"
 description: "Cấu hình bố cục, hiển thị thông tin, và các thành phần trên trang Chi tiết Sản phẩm."
-icon: "circle-user"
+icon: "box"
 ---
 
 ### **3.3.6. Product Detail**
