--- a/app-builder/builder/pages/category-page.mdx
+++ b/app-builder/builder/pages/category-page.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Categories"
 description: "Hướng dẫn cài đặt component Danh mục: chọn bố cục, quản lý dữ liệu (thêm/sửa/xóa), và tùy chỉnh phong cách hiển thị."
-icon: "circle-user"
+icon: "grid-2"
 ---
 
 ### **3.3.2.  Categories**
