Documentation edits made through Mintlify web editor

--- a/app-builder/builder/components/banners.mdx
+++ b/app-builder/builder/components/banners.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Banners"
 description: "Hướng dẫn thêm, sửa, xóa Banners và tùy chỉnh các hiệu ứng, phong cách hiển thị."
-icon: "circle-user"
+icon: "image"
 ---
 
 ### **4.2.2. Banners**
