--- a/app-builder/builder/components/news.mdx
+++ b/app-builder/builder/components/news.mdx
@@ -1,7 +1,7 @@
 ---
 title: "News"
 description: "Hướng dẫn quản lý dữ liệu Tin tức (thêm, sửa, xóa) và tùy chỉnh hiển thị, phong cách cho component."
-icon: "circle-user"
+icon: "newspaper"
 ---
 
 ### **4.2.6. News**
