--- a/app-builder/builder/components/products.mdx
+++ b/app-builder/builder/components/products.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Products"
 description: "Hướng dẫn quản lý dữ liệu (thêm, sửa, xóa) và tùy chỉnh hiển thị, phong cách cho component Products."
-icon: "circle-user"
+icon: "box"
 ---
 
 ### **4.2.4. Products**
