--- a/app-builder/builder/components/categories.mdx
+++ b/app-builder/builder/components/categories.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Categories"
 description: "Hướng dẫn quản lý dữ liệu (thêm, sửa, xóa) và tùy chỉnh phong cách cho component Categories."
-icon: "circle-user"
+icon: "grid-2"
 ---
 
 ### **4.2.3. Categories**
