--- a/app-builder/builder/components/cta.mdx
+++ b/app-builder/builder/components/cta.mdx
@@ -1,7 +1,7 @@
 ---
 title: "CTA"
 description: "Hướng dẫn tùy chỉnh component CTA: bật/tắt tiêu đề, các nút (Quan tâm OA, Liên hệ), và cài đặt phong cách."
-icon: "circle-user"
+icon: "megaphone"
 ---
 
 ### **4.2.5. CTA**
