--- a/app-builder/builder/components/headers.mdx
+++ b/app-builder/builder/components/headers.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Headers"
 description: "Cấu hình Header: bật/tắt logo, tiêu đề, icon giỏ hàng, icon tìm kiếm, và cài đặt thanh tìm kiếm."
-icon: "circle-user"
+icon: "layout-template"
 ---
 
 ### **4.2.1. Headers**
