--- a/app-builder/builder/components/support.mdx
+++ b/app-builder/builder/components/support.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Support"
 description: "Hướng dẫn quản lý dữ liệu (thêm, sửa, xóa) và tùy chỉnh hiển thị cho component Support."
-icon: "circle-user"
+icon: "headphones"
 ---
 
 ### **4.2.8. Support**
