Documentation edits made through Mintlify web editor

--- a/app-builder/builder/features/affiliate.mdx
+++ b/app-builder/builder/features/affiliate.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Affiliate"
 description: "Hướng dẫn cấu hình trang Affiliate: tùy chỉnh tiêu đề và bật/tắt hiển thị các mục như chia sẻ, thống kê hoa hồng, tiện ích."
-icon: "circle-user"
+icon: "handshake"
 ---
 
 ## **6.2. Affiliate**
