--- a/app-builder/builder/features/automation.mdx
+++ b/app-builder/builder/features/automation.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Automation"
 description: "Giới thiệu tính năng Automation: Tự động hóa quy trình chăm sóc khách hàng và marketing với Trigger, Condition, Action."
-icon: "circle-user"
+icon: "workflow"
 ---
 
 ## **6.1. Automation**
