--- a/app-builder/builder/features/loyalty.mdx
+++ b/app-builder/builder/features/loyalty.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Loyalty"
 description: "Hướng dẫn quản lý Hạng thành viên trong Loyalty: thêm mới, chỉnh sửa và xóa các cấp bậc thành viên."
-icon: "circle-user"
+icon: "medal"
 ---
 
 ## **6.4. Loyalty**
