--- a/automation/automation-flow.mdx
+++ b/automation/automation-flow.mdx
@@ -1,270 +1,197 @@
 ---
 title: "Automation Flow"
-description: "Description of your new file."
+description: "Giới thiệu tính năng Automation: Tự động hóa quy trình chăm sóc khách hàng và marketing với Trigger, Condition, Action."
 icon: "arrow-progress"
 ---
 
-## **Hành động**
+### **Giới thiệu về Automation**
 
----
+Automation trong AppMinis là công cụ giúp bạn tự động hóa các quy trình chăm sóc khách hàng, marketing và vận hành mà không cần lập trình.\
+Với tính năng này, bạn có thể tạo ra các luồng hành động tự động (automation flow) dựa trên hành vi người dùng hoặc sự kiện cụ thể trong ứng dụng.
 
-### **Thêm hành động có sẵn**
+Ví dụ:
 
-Hệ thống cung cấp một số **hành động mẫu cơ bản** cho người dùng.\
-Truy cập **Automation → Hành động → Thêm hành động mẫu → Chọn “Có”**.
+- Khi khách hàng đăng ký tài khoản mới, hệ thống tự động gửi tin nhắn chào mừng qua Zalo OA hoặc Email.
+- Khi khách hàng hoàn tất đơn hàng, hệ thống có thể gửi tin nhắn cảm ơn kèm mã giảm giá.
+- Khi khách hàng không hoạt động trong 7 ngày, hệ thống gửi lời nhắc quay lại ứng dụng.
 
-<Frame caption="Thêm hành động mẫu có sẵn">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image697_74ce25f6c1.png"
-    alt="Giao diện thêm hành động mẫu có sẵn"
-    style={{ borderRadius:"0.5rem" }}
-  />
-</Frame>
+Tất cả đều được thực hiện hoàn toàn tự động, giúp doanh nghiệp tiết kiệm thời gian và tối ưu tương tác với người dùng.
 
-Sau khi chọn **“Có”**, hệ thống sẽ hiển thị các mẫu hành động có sẵn bao gồm:
+### **Cấu trúc Automation**
 
-- Đơn hàng đang trên đường giao
-- Thông báo giao hàng thành công
-- Đơn hàng có cộng tác viên đã được thanh toán
-- Thông báo xác nhận đơn hàng có cộng tác viên
-- Thông báo sale đặc biệt
-- Thông báo yêu cầu rút tiền hoa hồng đã thành công
-- Thông báo khách hàng đã sử dụng điểm áp dụng trong đặt hàng
-- Thông báo cập nhật thông tin thành công
-- Thông báo yêu cầu rút tiền hoa hồng đã bị từ chối
-- Thông báo tăng hạng của khách hàng
+Mỗi kịch bản tự động (Automation Flow) trong AppMinis gồm 3 thành phần chính:
 
----
+**1. Trigger (Trình kích hoạt)**\
+Trigger là sự kiện khởi đầu cho luồng tự động. Đây là điều kiện “nếu có” xảy ra, hệ thống sẽ bắt đầu xử lý chuỗi hành động.
 
-## **Chiến dịch**
+Ví dụ phổ biến:
 
----
+- Khi người dùng đăng ký tài khoản mới
+- Khi người dùng hoàn tất đơn hàng
+- Khi người dùng click vào một nút cụ thể trong Mini App
+- Khi đến một ngày nhất định (ví dụ: sinh nhật, ngày hết hạn gói dịch vụ)
 
-### **Tìm kiếm chiến dịch**
+**2. Condition (Điều kiện)**\
+Condition giúp bạn lọc và xác định đối tượng hoặc hoàn cảnh cụ thể trước khi hành động xảy ra.
 
-Truy cập **Automation → Chiến dịch**\
-→ Nhập từ khóa vào thanh tìm kiếm → Nhấn **Enter** để tìm kiếm chiến dịch mong muốn.
+Ví dụ:
 
-<Frame caption="Tìm kiếm chiến dịch">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image698_735e42f287.png"
-    alt="Giao diện tìm kiếm chiến dịch"
-    style={{ borderRadius:"0.5rem" }}
-  />
-</Frame>
+- Chỉ gửi tin nhắn cho người dùng có vai trò là khách hàng VIP.
+- Chỉ gửi nếu đơn hàng có giá trị trên 500.000đ.
+- Chỉ thực hiện nếu người dùng chưa từng nhận ưu đãi này trước đó.
 
----
+**3. Action (Hành động)**\
+Action là bước thực hiện sau khi thỏa mãn Trigger và Condition.
 
-### **Thêm chiến dịch**
+Các loại hành động phổ biến:
 
-Truy cập **Automation → Chiến dịch → Thêm chiến dịch**.
+- 📩 Gửi ZNS (qua Zalo OA): xác nhận đơn hàng, OTP, khuyến mãi, chúc mừng sinh nhật,...
+- 💬 Gửi OA Message: chăm sóc khách hàng, mời tham gia sự kiện.
+- 📧 Gửi Email tự động: chào mừng, khuyến mãi, nhắc nhở giỏ hàng chưa thanh toán,...
+- 📱 Gửi SMS: thông tin nhanh hoặc xác thực.
+- 🔄 Hành động nội bộ: tạo điểm thưởng, cập nhật trạng thái đơn hàng, thêm người dùng vào nhóm loyalty,...
 
-<Frame caption="Thêm chiến dịch mới">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image699_61f1af870d.png"
-    alt="Nút thêm chiến dịch"
-    style={{ borderRadius:"0.5rem" }}
-  />
-</Frame>
+> Mỗi Action có thể chạy ngay hoặc có **độ trễ (delay)** theo thời gian bạn định nghĩa (ví dụ: sau 1 giờ, sau 3 ngày,...).
 
-Sau khi chọn, hệ thống hiển thị biểu mẫu.\
-→ Nhập **tên** và **mô tả chiến dịch**, sau đó chọn **Tiếp theo**.
+### **6.1.3. Cách tạo một luồng Automation**
 
-<Frame caption="Biểu mẫu nhập thông tin chiến dịch">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image700_9b33bbdf44.png"
-    alt="Biểu mẫu nhập thông tin chiến dịch"
-    style={{ borderRadius:"0.5rem" }}
-  />
-</Frame>
+<Steps>
+  <Step title="Truy cập Chiến dịch trong Automation">
+    Truy cập mục **Chiến dịch** trong thẻ **Automation** trong bảng quản trị.
 
-Tiếp theo, hệ thống hiển thị phần **Thiết lập chiến dịch**, người dùng chọn các trường phù hợp và nhấn **Tiếp theo**.
+    Chiến dịch trong Automation
 
-<Frame caption="Thiết lập chiến dịch">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image701_e45b8085ce.png"
-    alt="Thiết lập chiến dịch"
-    style={{ borderRadius:"0.5rem" }}
-  />
-</Frame>
+    <Frame caption>
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image512_fc9997ffa8.png"
+        alt="Screenshot of a deployment confirmation message that says All checks have passed."
+        style={{ borderRadius:"0.5rem" }}
+        title=""
+      />
+    </Frame>
+  </Step>
+  <Step title="Thêm chiến dịch mới">
+    Nhấn **Thêm chiến dịch** để bắt đầu.
 
----
+    Thêm chiến dịch trong Automation
 
-### **Loại chiến dịch gửi tin**
+    <Frame caption>
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image513_cb02291db6.png"
+        alt="Screenshot of a deployment confirmation message that says All checks have passed."
+        style={{ borderRadius:"0.5rem" }}
+        title=""
+      />
+    </Frame>
+  </Step>
+  <Step title="Thiết lập thông tin chiến dịch">
+    Thay đổi thông tin chiến dịch và nhấn **Lưu**.
 
-#### **1. Gửi một lần – Gửi ngay**
+    Thay đổi thông tin chiến dịch
 
-- Tin nhắn sẽ được gửi ngay khi chiến dịch được kích hoạt.
-- Thường dùng cho **chiến dịch truyền thông, quảng cáo hoặc thông báo ngắn hạn**.
-- Hệ thống mặc định sử dụng **mẫu tin OA**.
-- Người dùng có thể tạo **hành động (Action)**, chọn **đối tượng cụ thể** để gửi tin.
+    <Frame caption>
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image514_15d6a86365.png"
+        alt="Screenshot of a deployment confirmation message that says All checks have passed."
+        style={{ borderRadius:"0.5rem" }}
+        title=""
+      />
+    </Frame>
+  </Step>
+  <Step title="Chọn Trigger (nếu cần)">
+    Kéo thả hoặc bấm chọn **Trigger** (nếu cần sự kiện kích hoạt).
 
-**Có hai cách gửi tin:**
+    Danh sách Trigger
 
-- **Gửi tất cả khách hàng đã follow OA**
+    <Frame caption>
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image515_5fd4504fde.png"
+        alt="Screenshot of a deployment confirmation message that says All checks have passed."
+        style={{ borderRadius:"0.5rem" }}
+        title=""
+      />
+    </Frame>
+    Sau khi chọn Trigger
 
-<Frame>
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image702_df444a51de.png"
-    alt="Gửi tất cả khách hàng đã follow OA"
-    style={{ borderRadius:"0.5rem" }}
-  />
-</Frame>
+    <Frame caption>
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image516_549821ebb2.png"
+        alt="Screenshot of a deployment confirmation message that says All checks have passed."
+        style={{ borderRadius:"0.5rem" }}
+        title=""
+      />
+    </Frame>
+  </Step>
+  <Step title="Thêm Điều kiện (nếu có)">
+    Thêm **Điều kiện** (điều kiện ràng buộc nếu có).
 
-- **Gửi theo nhóm đối tượng cụ thể**
+    Danh sách điều kiện
 
-<Frame>
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image703_496bb10554.png"
-    alt="Gửi theo nhóm đối tượng cụ thể"
-    style={{ borderRadius:"0.5rem" }}
-  />
-</Frame>
+    <Frame caption>
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image517_41fe7c0e57.png"
+        alt="Screenshot of a deployment confirmation message that says All checks have passed."
+        style={{ borderRadius:"0.5rem" }}
+        title=""
+      />
+    </Frame>
+    Setup thông tin điều kiện
 
----
+    <Frame caption>
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image518_756f6a7f8f.png"
+        alt="Screenshot of a deployment confirmation message that says All checks have passed."
+        style={{ borderRadius:"0.5rem" }}
+        title=""
+      />
+    </Frame>
+  </Step>
+  <Step title="Chọn Hành động (bắt buộc)">
+    Chọn **Hành động** — ví dụ: gửi **ZNS**, **OA**, **Email**, hoặc **SMS**.
 
-#### **Các loại tin trong chiến dịch gửi một lần**
+    Setup thông tin hành động
 
-> **Tin tư vấn**
->
-> - Có thể thay đổi **ảnh bìa** và **nội dung tùy chỉnh**.
+    <Frame caption>
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image519_73d409ded6.png"
+        alt="Screenshot of a deployment confirmation message that says All checks have passed."
+        style={{ borderRadius:"0.5rem" }}
+        title=""
+      />
+    </Frame>
+  </Step>
+  <Step title="Xem lại & Kích hoạt">
+    Xem lại luồng, sau đó **Lưu** hoặc bật **Kích hoạt (Active)**.
 
-<Frame>
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image704_9a0def2c66.png"
-    alt="Ví dụ tin tư vấn"
-    style={{ borderRadius:"0.5rem" }}
-  />
-</Frame>
+    Setup thông tin hành động
 
-> **Tin giao dịch**
+    <Frame caption>
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image520_b960ede5a2.png"
+        alt="Screenshot of a deployment confirmation message that says All checks have passed."
+        style={{ borderRadius:"0.5rem" }}
+        title=""
+      />
+    </Frame>
+  </Step>
+</Steps>
 
-<Frame>
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image705_b6182babae.png"
-    alt="Ví dụ tin giao dịch"
-    style={{ borderRadius:"0.5rem" }}
-  />
-</Frame>
+> Hệ thống sẽ tự động chạy luồng mỗi khi **Trigger** xảy ra.
 
-<Frame>
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image706_6b84056d96.png"
-    alt="Giao diện tin giao dịch chi tiết 2"
-    style={{ borderRadius:"0.5rem" }}
-  />
-</Frame>
+### **Lợi ích của Automation**
 
-> - Chọn **loại giao dịch**
-> - Tải **ảnh bìa** (nếu cần)
-> - Nhập **tên mẫu tin**, **nội dung**, và **cập nhật bảng thông tin**
-> - Thay đổi liên kết “Kiểm tra lộ trình”, “Xem giỏ hàng”, “Liên hệ tổng đài” bằng cách nhấn <Icon icon="eyes" color="#cfcfcf" size={15} />
+- **Tiết kiệm thời gian:** Không cần thao tác thủ công gửi từng tin.
+- **Cá nhân hóa trải nghiệm:** Gửi đúng nội dung, đúng thời điểm, đúng người.
+- **Tăng tỷ lệ chuyển đổi:** Duy trì tương tác và chăm sóc khách hàng liên tục.
+- **Đồng bộ dữ liệu:** Mọi hành động, thông tin và phản hồi đều được ghi nhận tự động vào hệ thống.
 
-<Frame>
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image707_85b23b8735.png"
-    alt="Giao diện tin giao dịch chi tiết 3"
-    style={{ borderRadius:"0.5rem" }}
-  />
-</Frame>
+### **Ví dụ thực tế**
 
-> **Tin truyền thông**
+**Kịch bản: Chăm sóc khách hàng sau mua hàng**
 
-
-<Frame>
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image708_2fe20cb95c.png"
-    alt="Tin truyền thông 1"
-    style={{ borderRadius:"0.5rem" }}
-  />
-</Frame>
-
-<Frame>
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image709_c330c2b26e.png"
-    alt="Tin truyền thông 2"
-    style={{ borderRadius:"0.5rem" }}
-  />
-</Frame>
-> - Có thể thay đổi **ảnh bìa**, **tên mẫu tin**, **nội dung**, và các thông tin hiển thị tương tự.
-> - Cập nhật “Kiểm tra lộ trình”, “Xem giỏ hàng”, “Liên hệ tổng đài” bằng cách nhấn <Icon icon="eyes" color="#cfcfcf" size={15} /> .
-<Frame>
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image710_a762dfafcd.png"
-    alt="Tin truyền thông 3"
-    style={{ borderRadius:"0.5rem" }}
-  />
-</Frame>
-
----
-
-#### **2. Gửi nhiều lần – Gửi xuyên suốt**
-
-- Tin nhắn được gửi theo **chu kỳ lặp lại**.
-- Dùng cho các chiến dịch **dài hạn**, ví dụ: xác nhận đơn hàng, cập nhật trạng thái, giao hàng thành công,…
-- Có thể chọn mẫu tin từ **ZNS** hoặc **OA**, kết hợp nhiều **hành động (Action)** trong cùng chiến dịch.
-- Gửi tin theo hai cách:
-  - Tất cả khách hàng đã follow OA
-  - Hoặc nhóm đối tượng cụ thể
-
-<Frame>
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image711_90316964de.png"
-    alt="Chiến dịch gửi xuyên suốt"
-    style={{ borderRadius:"0.5rem" }}
-  />
-</Frame>
-Khi đã nhập đầy đủ thông tin, nhấn **Tạo** để hoàn tất chiến dịch.
-
----
-
-### **Xem chi tiết chiến dịch**
-
-Truy cập **Automation → Chiến dịch**\
-→ Nhấn biểu tượng <Icon icon="eye" color="#cfcfcf" size={15} /> để xem chi tiết chiến dịch.
-
-<Frame>
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image712_2938d344ce.png"
-    alt="Xem chi tiết chiến dịch - bước 1"
-    style={{ borderRadius:"0.5rem" }}
-  />
-</Frame>
-
-<Frame>
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image713_9e73c5afb8.png"
-    alt="Xem chi tiết chiến dịch - bước 2"
-    style={{ borderRadius:"0.5rem" }}
-  />
-</Frame>
-
----
-
-### **Chỉnh sửa chiến dịch**
-
-Truy cập **Automation → Chiến dịch**\
-→ Nhấn biểu tượng <Icon icon="edit" color="#cfcfcf" size={15} /> để chỉnh sửa chiến dịch.
-
-<Frame>
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image714_368dac5988.png"
-    alt="Chỉnh sửa chiến dịch"
-    style={{ borderRadius:"0.5rem" }}
-  />
-</Frame>
-
----
-
-### **Xóa chiến dịch**
-
-Truy cập **Automation → Chiến dịch**\
-→ Nhấn biểu tượng <Icon icon="trash-2" color="#cfcfcf" size={15} /> để xóa chiến dịch.
-
-<Frame>
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image715_3b80a34aed.png"
-    alt="Xóa chiến dịch"
-    style={{ borderRadius:"0.5rem" }}
-  />
-</Frame>
+- **Trigger:** Người dùng hoàn tất thanh toán đơn hàng.
+- **Điều kiện:** Giá trị đơn hàng \> 300.000đ.
+- **Hành động:**
+  1. Gửi ZNS xác nhận đơn hàng.
+  2. Sau 2 ngày → gửi OA cảm ơn và mời đánh giá sản phẩm.
+  3. Sau 7 ngày → gửi Email khuyến mãi “Mua lần 2 giảm 10%”.
